results/SVCOMP/conversational/log-NullPointerException4-2024_03_14_21_56_18.txt
class A {
  int i;
}

public class NullPointerException4 {
    //@ ensures \result <==> (\exists Exception exc; a == null);
    public static boolean f() {
        A a = null;
        try {
            a.i = 0;
        } catch (Exception exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException4.java:6: error: cannot find symbol
    //@ ensures \result <==> (\exists Exception exc; a == null);
                                                     ^
  symbol:   variable a
  location: class NullPointerException4
1 error

class A {
  int i;
}

public class NullPointerException4 {
    //@ ensures \result <==> (\exists Exception exc; true);
    public static boolean f() {
        A a = null;
        try {
            a.i = 0;
        } catch (Exception exc) {
            return false;
        }
        return true;
    }
}
